snapshots/care/data4life/hc-util-sdk-kmp/error/1.14.0-SNAPSHOT/error-1.14.0-20220831.180107-1.pom.md5
c1f969b5cc2524737f910ddb7c3aed5f